--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html lang="">
   <head>
-    <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
+    <meta charset="UTF-8" />
+    <link rel="icon" href="/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Rabbit</title>
+    <!-- 阿里字体图标引入 -->
+    <link
+      rel="stylesheet"
+      href="//at.alicdn.com/t/font_2143783_iq6z4ey5vu.css" />
   </head>
   <body>
     <div id="app"></div>
